# todo

./: .gitignore  logo.psd  stack.yaml  todo.cabal
LogTodo/: app.json  bower.json  index.android.js  index.ios.js  package.json
LogTodo/android/: settings.gradle
LogTodo/android/app/: BUCK  build.gradle
LogTodo/android/app/src/main/: AndroidManifest.xml
LogTodo/android/app/src/main/java/com/logtodo/: MainActivity.java  MainApplication.java
LogTodo/android/app/src/main/res/values/: strings.xml
LogTodo/ios/LogTodo/: AppDelegate.m  Info.plist
LogTodo/ios/LogTodo.xcodeproj/: project.pbxproj
LogTodo/ios/LogTodo.xcodeproj/xcshareddata/xcschemes/: LogTodo-tvOS.xcscheme  LogTodo.xcscheme
LogTodo/ios/LogTodo/Base.lproj/: LaunchScreen.xib
LogTodo/ios/LogTodoTests/: LogTodoTests.m
LogTodo/src/: Main.purs
migrations/: 0.sql  1.sql  2.sql  3.sql  4.sql
src/: Context.hs  Main.hs  State.hs
static/: app.js
static/css/: main.css
templates/: _base.tpl  archive.tpl  edit.tpl  index.tpl  snoozed.tpl
