name:                todo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/todo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable todo
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , logging
                     , fn
                     , larceny
                     , text
                     , containers
                     , wai
                     , warp
                     , digestive-functors
                     , mtl
                     , lucid
                     , resourcet
                     , http-types
                     , bytestring
                     , wai-extra
                     , directory
                     , postgresql-simple
                     , resource-pool
                     , heroku
                     , time
                     , wai-middleware-rollbar
                     , dotenv
                     , pushover
                     , parsec
  default-language:    Haskell2010

test-suite todo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/todo
